src/App.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Nunito Sans', sans-serif;
  color: rgba(0,0,0,.7);
}
/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}
a{
  text-decoration: none;
}
p{
  color: rgb(90, 66, 21);
}
h1{
  /* font-size: 27px; */
  letter-spacing: 1px;
  font-family: 'Baskervville', serif;
}
h3{
  font-size: 13px;
  letter-spacing: 1px;
  color: rgb(190, 160, 94);
}
.max-600-container{
  width: 80%;
  max-width: 600px;
  margin: 0 auto;
}
.max-600-container h3{
  margin-bottom: 10px;
}


.social{
  width: 120px;
  margin-top: 30px;
  display: flex;
  justify-content: space-between;
}
.social i{
  font-size: 20px;
  color: rgba(0,0,0,.5);
}
.social i:hover{
  color: #000000;
}

@media screen and (max-width: 475px){
  h1{
    font-size: 27px;
  }
  h3{
    font-size: 10px;
  }
  p{
    font-size: 15px;

  }
}

@media screen and (max-width: 340px){
  h1{
    font-size: 20px;
  }
  h3{
    font-size: 10px;
  }
  p{
    font-size: 15px;
  }
}

